Fixed code block spacing

--- a/_tutorials/.shared/code-animation/code-animation.css
+++ b/_tutorials/.shared/code-animation/code-animation.css
@@ -9,7 +9,7 @@
 */
 
 .code-animation {
-  margin: 1.5rem 0;
+  margin: 0;
 }
 
 /* Output hidden until JS sets visibility/opacity directly */
